--- a/grid-world.ipynb
+++ b/grid-world.ipynb
@@ -29125,7 +29125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29215,18 +29215,20 @@
     "            if self.use_baseline:\n",
     "                baseline_values = self.baseline.predict(np.array(states), verbose=0).flatten()\n",
     "                # Normalize returns using the baseline\n",
-    "                returns = returns - baseline_values \n",
+    "                adv_returns = returns - baseline_values \n",
     "                ''' The subtraction is correct, since it is element-wise and so so for each time step t,\n",
     "                    I subtract the baseline for state s_t from the return G_t. '''\n",
     "\n",
-    "            # Fit the model using the states, one-hot encoded actions, and returns\n",
-    "            self.policy.fit(np.array(states), actions_one_hot, sample_weight=returns, epochs=1, verbose=0)\n",
+    "                # Fit the model using the states, one-hot encoded actions, and returns\n",
+    "                self.policy.fit(np.array(states), actions_one_hot, sample_weight=adv_returns, epochs=1, verbose=0)\n",
     "\n",
-    "            # If using baseline, update the baseline model\n",
-    "            if self.use_baseline:\n",
-    "                # Compute the baseline targets as the mean of returns for each state\n",
+    "                # Baseline update uses original returns as target..\n",
+    "                # ..this is because the baseline learns the expected return for each state\n",
     "                baseline_targets = returns\n",
-    "                self.baseline.fit(np.array(states), baseline_targets, epochs=1, verbose=0) \n",
+    "                self.baseline.fit(np.array(states), baseline_targets, epochs=1, verbose=0)\n",
+    "            else:\n",
+    "                # Fit the model using the states and one-hot encoded actions\n",
+    "                self.policy.fit(np.array(states), actions_one_hot, sample_weight=returns, epochs=1, verbose=0)\n",
     "\n",
     "            # Print progress\n",
     "            print(f\"Episode {e}/{episodes} completed. Total reward: {sum(rewards)}\")\n",
@@ -29360,7 +29362,7 @@
     "gridworld = GridWorld(grid_size, (0, 0), (grid_size-1, grid_size-1))\n",
     "# Initialize and train the REINFORCE agent\n",
     "reinforce = reinforce_agent(state=(grid_size, grid_size), n_actions=len(actions))\n",
-    "reinforce.train(gridworld, episodes=400, max_steps=100)"
+    "reinforce.train(gridworld, episodes=100, max_steps=120)"
    ]
   },
   {
@@ -29420,63 +29422,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Episode 0/50 completed. Total reward: 0.99\n",
-      "Episode 1/50 completed. Total reward: 0.89\n",
-      "Episode 2/50 completed. Total reward: 0.99\n",
-      "Episode 3/50 completed. Total reward: 0.97\n",
-      "Episode 4/50 completed. Total reward: 0.82\n",
-      "Episode 5/50 completed. Total reward: 0.96\n",
-      "Episode 6/50 completed. Total reward: 0.97\n",
-      "Episode 7/50 completed. Total reward: 0.98\n",
-      "Episode 8/50 completed. Total reward: 1\n",
-      "Episode 9/50 completed. Total reward: 0.97\n",
-      "Episode 10/50 completed. Total reward: 0.98\n",
-      "Episode 11/50 completed. Total reward: 0.99\n",
-      "Episode 12/50 completed. Total reward: 0.9299999999999999\n",
-      "Episode 13/50 completed. Total reward: 0.99\n",
-      "Episode 14/50 completed. Total reward: 0.9\n",
-      "Episode 15/50 completed. Total reward: 0.99\n",
-      "Episode 16/50 completed. Total reward: 0.96\n",
-      "Episode 17/50 completed. Total reward: 0.96\n",
-      "Episode 18/50 completed. Total reward: 0.95\n",
-      "Episode 19/50 completed. Total reward: 0.91\n",
-      "Episode 20/50 completed. Total reward: 0.96\n",
-      "Episode 21/50 completed. Total reward: 0.97\n",
-      "Episode 22/50 completed. Total reward: 0.96\n",
-      "Episode 23/50 completed. Total reward: 0.97\n",
-      "Episode 24/50 completed. Total reward: 0.96\n",
-      "Episode 25/50 completed. Total reward: 0.97\n",
-      "Episode 26/50 completed. Total reward: 0.98\n",
-      "Episode 27/50 completed. Total reward: 0.94\n",
-      "Episode 28/50 completed. Total reward: 0.91\n",
-      "Episode 29/50 completed. Total reward: 0.9299999999999999\n",
-      "Episode 30/50 completed. Total reward: 0.98\n",
-      "Episode 31/50 completed. Total reward: 0.9\n",
-      "Episode 32/50 completed. Total reward: 0.91\n",
-      "Episode 33/50 completed. Total reward: 0.96\n",
-      "Episode 34/50 completed. Total reward: 0.99\n",
-      "Episode 35/50 completed. Total reward: 0.92\n",
-      "Episode 36/50 completed. Total reward: 0.91\n",
-      "Episode 37/50 completed. Total reward: 0.9299999999999999\n",
-      "Episode 38/50 completed. Total reward: 1\n",
-      "Episode 39/50 completed. Total reward: 0.99\n",
-      "Episode 40/50 completed. Total reward: 1\n",
-      "Episode 41/50 completed. Total reward: 0.74\n",
-      "Episode 42/50 completed. Total reward: 0.95\n",
-      "Episode 43/50 completed. Total reward: 0.7999999999999999\n",
-      "Episode 44/50 completed. Total reward: 0.98\n",
-      "Episode 45/50 completed. Total reward: 0.94\n",
-      "Episode 46/50 completed. Total reward: 0.99\n",
-      "Episode 47/50 completed. Total reward: 0.97\n",
-      "Episode 48/50 completed. Total reward: 0.95\n",
-      "Episode 49/50 completed. Total reward: 0.98\n",
+      "Episode 0/100 completed. Total reward: -0.2800000000000001\n",
+      "Episode 1/100 completed. Total reward: -0.4100000000000002\n",
+      "Episode 2/100 completed. Total reward: -0.36000000000000015\n",
+      "Episode 3/100 completed. Total reward: -0.2900000000000001\n",
+      "Episode 4/100 completed. Total reward: 0.96\n",
+      "Episode 5/100 completed. Total reward: -0.18000000000000002\n",
+      "Episode 6/100 completed. Total reward: 0.7899999999999999\n",
+      "Episode 7/100 completed. Total reward: 0.6799999999999999\n",
+      "Episode 8/100 completed. Total reward: 0.83\n",
+      "Episode 9/100 completed. Total reward: -0.3100000000000001\n",
+      "Episode 10/100 completed. Total reward: 0.73\n",
+      "Episode 11/100 completed. Total reward: 0.95\n",
+      "Episode 12/100 completed. Total reward: 0.6199999999999999\n",
+      "Episode 13/100 completed. Total reward: 0.98\n",
+      "Episode 14/100 completed. Total reward: 0.9299999999999999\n",
+      "Episode 15/100 completed. Total reward: 0.88\n",
+      "Episode 16/100 completed. Total reward: 0.97\n",
+      "Episode 17/100 completed. Total reward: 0.99\n",
+      "Episode 18/100 completed. Total reward: 0.96\n",
+      "Episode 19/100 completed. Total reward: 0.95\n",
+      "Episode 20/100 completed. Total reward: 0.97\n",
+      "Episode 21/100 completed. Total reward: 0.94\n",
+      "Episode 22/100 completed. Total reward: 1\n",
+      "Episode 23/100 completed. Total reward: 0.7999999999999999\n",
+      "Episode 24/100 completed. Total reward: 0.86\n",
+      "Episode 25/100 completed. Total reward: 0.95\n",
+      "Episode 26/100 completed. Total reward: 0.88\n",
+      "Episode 27/100 completed. Total reward: 0.7999999999999999\n",
+      "Episode 28/100 completed. Total reward: -0.5300000000000002\n",
+      "Episode 29/100 completed. Total reward: 0.92\n",
+      "Episode 30/100 completed. Total reward: 0.97\n",
+      "Episode 31/100 completed. Total reward: 0.91\n",
+      "Episode 32/100 completed. Total reward: 0.92\n",
+      "Episode 33/100 completed. Total reward: 0.94\n",
+      "Episode 34/100 completed. Total reward: 0.98\n",
+      "Episode 35/100 completed. Total reward: 1\n",
+      "Episode 36/100 completed. Total reward: 0.89\n",
+      "Episode 37/100 completed. Total reward: 0.92\n",
+      "Episode 38/100 completed. Total reward: 0.92\n",
+      "Episode 39/100 completed. Total reward: 0.97\n",
+      "Episode 40/100 completed. Total reward: 0.88\n",
+      "Episode 41/100 completed. Total reward: 0.7699999999999999\n",
+      "Episode 42/100 completed. Total reward: 0.95\n",
+      "Episode 43/100 completed. Total reward: 0.98\n",
+      "Episode 44/100 completed. Total reward: 0.85\n",
+      "Episode 45/100 completed. Total reward: 0.72\n",
+      "Episode 46/100 completed. Total reward: 0.5699999999999998\n",
+      "Episode 47/100 completed. Total reward: 0.91\n",
+      "Episode 48/100 completed. Total reward: 0.99\n",
+      "Episode 49/100 completed. Total reward: 0.99\n",
+      "Episode 50/100 completed. Total reward: 0.96\n",
+      "Episode 51/100 completed. Total reward: 0.7\n",
+      "Episode 52/100 completed. Total reward: 0.95\n",
+      "Episode 53/100 completed. Total reward: 0.87\n",
+      "Episode 54/100 completed. Total reward: 0.83\n",
+      "Episode 55/100 completed. Total reward: 0.98\n",
+      "Episode 56/100 completed. Total reward: 0.97\n",
+      "Episode 57/100 completed. Total reward: 1\n",
+      "Episode 58/100 completed. Total reward: 1\n",
+      "Episode 59/100 completed. Total reward: 0.99\n",
+      "Episode 60/100 completed. Total reward: 0.98\n",
+      "Episode 61/100 completed. Total reward: 0.97\n",
+      "Episode 62/100 completed. Total reward: 0.98\n",
+      "Episode 63/100 completed. Total reward: 0.97\n",
+      "Episode 64/100 completed. Total reward: 0.99\n",
+      "Episode 65/100 completed. Total reward: 0.92\n",
+      "Episode 66/100 completed. Total reward: 0.96\n",
+      "Episode 67/100 completed. Total reward: 0.99\n",
+      "Episode 68/100 completed. Total reward: 0.99\n",
+      "Episode 69/100 completed. Total reward: 0.98\n",
+      "Episode 70/100 completed. Total reward: 0.98\n",
+      "Episode 71/100 completed. Total reward: 0.96\n",
+      "Episode 72/100 completed. Total reward: 0.97\n",
+      "Episode 73/100 completed. Total reward: 0.9299999999999999\n",
+      "Episode 74/100 completed. Total reward: 0.98\n",
+      "Episode 75/100 completed. Total reward: 0.97\n",
+      "Episode 76/100 completed. Total reward: 0.99\n",
+      "Episode 77/100 completed. Total reward: 0.98\n",
+      "Episode 78/100 completed. Total reward: 1\n",
+      "Episode 79/100 completed. Total reward: 0.98\n",
+      "Episode 80/100 completed. Total reward: 0.97\n",
+      "Episode 81/100 completed. Total reward: 0.98\n",
+      "Episode 82/100 completed. Total reward: 0.96\n",
+      "Episode 83/100 completed. Total reward: 0.94\n",
+      "Episode 84/100 completed. Total reward: 0.88\n",
+      "Episode 85/100 completed. Total reward: 0.96\n",
+      "Episode 86/100 completed. Total reward: 0.94\n",
+      "Episode 87/100 completed. Total reward: 0.97\n",
+      "Episode 88/100 completed. Total reward: 0.91\n",
+      "Episode 89/100 completed. Total reward: 1\n",
+      "Episode 90/100 completed. Total reward: 0.9299999999999999\n",
+      "Episode 91/100 completed. Total reward: 0.98\n",
+      "Episode 92/100 completed. Total reward: 1\n",
+      "Episode 93/100 completed. Total reward: 0.96\n",
+      "Episode 94/100 completed. Total reward: 0.9299999999999999\n",
+      "Episode 95/100 completed. Total reward: 0.99\n",
+      "Episode 96/100 completed. Total reward: 0.96\n",
+      "Episode 97/100 completed. Total reward: 0.98\n",
+      "Episode 98/100 completed. Total reward: 1\n",
+      "Episode 99/100 completed. Total reward: 0.91\n",
       "REINFORCE training complete.\n"
      ]
     }
@@ -29487,12 +29539,12 @@
     "gridworld = GridWorld(grid_size, (0, 0), (grid_size-1, grid_size-1))\n",
     "# Initialize and train the REINFORCE agent\n",
     "reinforce = reinforce_agent(state=(grid_size, grid_size), n_actions=len(actions), use_baseline=True)\n",
-    "reinforce.train(gridworld, episodes=50, max_steps=120)"
+    "reinforce.train(gridworld, episodes=100, max_steps=120)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -29508,10 +29560,10 @@
       " [0. 0. 0. 0. 0. 0. 1.]\n",
       " [0. 0. 0. 0. 0. 0. 6.]]\n",
       "\n",
-      "Action: left, Probability: 0.0244\n",
-      "Action: right, Probability: 0.2804\n",
-      "Action: up, Probability: 0.0980\n",
-      "Action: down, Probability: 0.5972\n"
+      "Action: left, Probability: 0.0213\n",
+      "Action: right, Probability: 0.4753\n",
+      "Action: up, Probability: 0.0570\n",
+      "Action: down, Probability: 0.4464\n"
      ]
     }
    ],
@@ -29542,10 +29594,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> As we can clearly see, the reinforce agent with baseline accurately predicts the action probabilities for the given state. Namely, it learn a good policy which is able to assign the right probabilities for each state.\n",
-    "The main difference with the REINFORCE agent without the baseline is that this one is capable of reaching better results with the same amount of experience, outperforming the naive one.\n",
-    "\n",
-    ">> This is because using the advantage (the difference G_t - v(S_t)) instead of the raw return means the policy is only updated when the outcome is better or worse than expected, not just because of random fluctuations in the returns."
+    "> The REINFORCE agent with baseline does a better job wrt the naive one, because it gives an higher prob. to the right action."
    ]
   },
   {
